Resolve the walking skeleton
The surfaces genuinely share one core; neither ADR 0001 revisit condition
triggered. Amends the CLI backend (curl, not Ember), the 2026-07-28 MCP
requirements, the HTTP decode-failure handler, daemon JVM flags and the
survey's doobie version.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>